# infiniStore

./: .buildinfo  .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  api.html  bug.py  bug.sh  build_manylinux_wheels.sh  design.html  genindex.html  index.html  infinistore.html  infinity.c  infinity.py  infinity1.py  libinfinity.c  libinfinity.h  modules.html  objects.inv  protocol.h  py-modindex.html  pybind.cc  pyproject.toml  run_test.sh  search.html  searchindex.js  setup.py  start.py  start.sh  test_client.c  test_infinity.py  utils.c  utils.h
.github/workflows/: deploy-docs.yml  pre-commit.yml
_sources/: api.rst.txt  index.rst.txt  infinistore.rst.txt  modules.rst.txt
docs/source/: conf.py  design.rst  index.rst
experiments/: client.c
experiments/t1/: Makefile  server.c
infinistore/: __init__.py  benchmark.py  conftest.py  lib.py  server.py  test_infinistore.py  warmup.py
infinistore/example/: client.py  client_async.py  client_async_single.py  demo_prefill.py  new.py
infinity/: __init__.py  bug.py  lib.py  r.py  test.py  test_infinity.py
libinfinielf/: Makefile
libinfinielf/include/: infelf.h  infelf_gpu_mem.h  infelf_rdma.h
libinfinielf/src/: client.c  example.c  example.h  gpu_mem.c  rdma.c  server.c  util.c
src/: Makefile  allocate_response.fbs  allocate_response_generated.h  config.h  get_match_last_index.fbs  get_match_last_index_generated.h  ibv_helper.c  ibv_helper.cpp  ibv_helper.h  infinistore.cpp  infinistore.h  infinity.c  infinity.cpp  libinfinistore.cpp  libinfinistore.h  libinfinity.c  libinfinity.cpp  libinfinity.h  local_meta_generated.h  local_meta_request.fbs  local_meta_request_generated.h  log.cpp  log.h  mempool.cpp  mempool.h  meta_request.fbs  meta_request_generated.h  protocol.c  protocol.cpp  protocol.h  pybind.cc  pybind.cpp  test_client.c  test_protocol.cc  test_protocol.cpp  utils.cpp  utils.h
src/client/: CMakeLists.txt  libinfinistore.cpp
src/client/include/: libinfinistore.h
src/client_bindgen/: CMakeLists.txt  client_bindgen.cpp
src/common/: CMakeLists.txt  ibv_helper.cpp  log.cpp  protocol.cpp  utils.cpp
src/common/include/: ibv_helper.h  local_meta_request_generated.h  meta_request_generated.h  protocol.h  utils.h
src/infinistore/: benchmark.py  lib.py  server.py  test_infinistore.py  warmup.py
src/infinistore/example/: demo_prefill.py
src/server/: CMakeLists.txt  infinistore.cpp  mempool.cpp
src/server/include/: infinistore.h
src/server_bindgen/: CMakeLists.txt  server_bindgen.cpp
src/test/: Makefile  test_client.c  test_protocol.cpp
